--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -232,3 +232,12 @@
     margin-top: 20rem;
   }
 }
+
+/* Tablets (portrait) */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: 'portrait') and (-webkit-min-device-pixel-ratio: 1) {
+  .footer {
+    h1 {
+      width: 100%;
+    }
+  }
+}
