--- a/src/components/hero/hero.scss
+++ b/src/components/hero/hero.scss
@@ -463,5 +463,9 @@
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: 'portrait') and (-webkit-min-device-pixel-ratio: 1) {
   .hero {
     height: 750px;
+
+    &-scroll {
+      translate: -25px 25px;
+    }
   }
 }
