--- a/src/components/history/history.scss
+++ b/src/components/history/history.scss
@@ -140,3 +140,16 @@
     }
   }
 }
+
+/* Tablets (portrait) */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: 'portrait') and (-webkit-min-device-pixel-ratio: 1) {
+  .history {
+    width: 100%;
+    &-list {
+      &--row {
+        width: 85%;
+        height: 175px;
+      }
+    }
+  }
+}
