--- a/src/components/notes/notes.scss
+++ b/src/components/notes/notes.scss
@@ -185,3 +185,12 @@
     }
   }
 }
+
+/* Tablets (portrait) */
+@media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: 'portrait') and (-webkit-min-device-pixel-ratio: 1) {
+  .notes {
+    &-one {
+      height: 1000px;
+    }
+  }
+}
