--- a/src/components/services/services.scss
+++ b/src/components/services/services.scss
@@ -326,10 +326,6 @@
 @media only screen and (min-device-width: 768px) and (max-device-width: 1024px) and (orientation: 'landscape') and (-webkit-min-device-pixel-ratio: 1) {
   .services {
     &-list {
-      width: 100%;
-      width: fit-content;
-      flex-wrap: wrap;
-      justify-content: center;
       padding: 1rem 0;
       gap: 2rem;
 
@@ -349,13 +345,14 @@
   .services {
     &-list {
       width: 100%;
-      width: fit-content;
       flex-wrap: wrap;
-      justify-content: center;
+      justify-content: space-between;
       padding: 1rem 0;
       gap: 2rem;
 
       &--card {
+        width: 45%;
+
         &-bottom {
           p {
             width: 100%;
